--- a/src/app/user/manage-user-orders/manage-user-orders.component.html
+++ b/src/app/user/manage-user-orders/manage-user-orders.component.html
@@ -13,12 +13,12 @@
             </nb-card-header>
             <nb-card-body>
               <div class="row">
-                <div class="col-md-6">
-                  <div class="col-md-4">
+                <div class="col-md-5">
+                  <div class="col-md-4 img">
                     <img [src]="url+order.data.novel.avatar" class="img-fluid" alt="">
                   </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-5">
                   <div class="details">
                     {{order.created | date}}
                     <hr>
@@ -55,12 +55,12 @@
             </nb-card-header>
             <nb-card-body>
               <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-5 img">
                   <div class="col-md-4">
                     <img [src]="url+order.data.novel.avatar" class="img-fluid" alt="">
                   </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-5">
                   <div class="details">
                     {{order.created | date}}
                     <hr>
